# Record-Linkage

./: .gitignore  README.md  TODO-in-relazione.md  pyproject.toml  pyrightconfig.json  requirements.txt  run_pipeline.py
config/: settings.py
docs/: HOMEWORK.md
download_data/: download_datasets.ipynb
eda/: eda_cars.ipynb  eda_vehicles.ipynb
eda_preprocessing/: download_datasets.ipynb  eda_dataset_cars.ipynb  eda_dataset_vehicles.ipynb
notebooks/: eda_cars.ipynb  eda_vehicles.ipynb
output/: pipeline_performance_report.json
output/blocking/: stats_blocking_B1.json  stats_blocking_B2.json
output/result_models/: evaluate_dedupe.json  evaluate_record_linkage.json
pipelines/: dedupe.ipynb  record_linkage.ipynb
results/: pipeline_report.json
results/blocking/: test_stats_B1.json  test_stats_B2.json
schema_alignment/: ground_truth.ipynb  mediated_schema.ipynb
scripts/: generate_all_datasets.py  generate_ground_truth.py  generate_mediated_schema.py  preprocess_used_cars.py  preprocess_vehicles.py  setup_datasets.py
src/: __init__.py  config.py
src/blocking/: __init__.py  ditto_format.py  generate.py
src/donwload_data/: __init__.py  download.py
src/download_data/: download.py
src/evaluation/: __init__.py  compare.py
src/matching/: __init__.py  dedupe.py  dedupe_eval.py  ditto.py  logistic_regression.py  recordlinkage.py
src/pipelines/: __init__.py  dedupe.py  ditto_pipeline.py  evaluate_dedupe.py  evaluate_pipelines.py  pairs_blocking.py  prepare_ditto.py  prepare_inference_ditto.py  (+3 more)
tests/: test_blocking_generate.py  test_compare_metrics.py
(+15 files in other folders)
